--- a/TureOrDare.html
+++ b/TureOrDare.html
@@ -15,11 +15,11 @@
         <div class="area people-area">
             <div class="new-people-example" hidden>
                 <div class="people">
-                    <a class="chose-sex"><i class="fas fa-male fa-lg"></i></a>
-                    <a class="chose-sex"><i class="fas fa-female fa-lg"></i></a>
+                    <a class="chose-sex" data-sex="M"><i class="fas fa-male fa-lg"></i></a>
+                    <a class="chose-sex" data-sex="F"><i class="fas fa-female fa-lg"></i></a>
                     <input name="player-name" type="text">
                     <input hidden name="player-sex" type="text">
-                    <a class="remove-sex"><i class="fas fa-times"></i></a>
+                    <a style="visibility:hidden;"><i class="fas fa-times"></i></a>
                 </div>
             </div>
             <div class="people">
