新增遊系區塊

--- a/TureOrDare.html
+++ b/TureOrDare.html
@@ -12,7 +12,8 @@
                 <i class="fas fa-user-plus" id="add-people"></i>
             </div>
         </header>
-        <div class="area people-area">
+        <!-- 人數設定區塊 -->
+        <div class="area people-area" hidden>
             <div class="new-people-example" hidden>
                 <div class="people">
                     <a class="chose-sex" data-sex="M"><i class="fas fa-male fa-lg"></i></a>
@@ -30,7 +31,12 @@
                 <a style="visibility:hidden;"><i class="fas fa-times"></i></a>
             </div>
         </div>
-        <div class="area system-area">
+        <!-- 遊戲區塊 -->
+        <div class="area player-area">
+
+        </div>
+        <!-- 系統區塊 -->
+        <div class="area system-area" hidden>
             <div class="question">
                 <i class="fas fa-question fa-lg"></i><input type="text" name="question"><a><i class="fas fa-plus"></i></a>
             </div>
