--- a/Boast.html
+++ b/Boast.html
@@ -1,18 +1,21 @@
 <html>
     <head>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-        <script src="jquery-3.3.1.min.js"></script>
+        <script src="include.js"></script>
     </head>
     <body>
         <a onclick='shake();'>
             <div>
-                <i class="fas fa-dice-one fa-3x"></i>
-                <i class="fas fa-dice-one fa-3x"></i>
-                <i class="fas fa-dice-one fa-3x"></i>
-                <i class="fas fa-dice-one fa-3x"></i>
-                <i class="fas fa-dice-one fa-3x"></i>
+                <i class="fas fa-dice-one fa-4x"></i>
+                <i class="fas fa-dice-one fa-4x"></i>
+                <i class="fas fa-dice-one fa-4x"></i>
+                <i class="fas fa-dice-one fa-4x"></i>
+                <i class="fas fa-dice-one fa-4x"></i>
             </div>
         </a>
     </body>
+    <script>
+        responsiveVoice.speak("點擊甩子", "Chinese Female");
+    </script>
     <script src="Boast.js"></script>
 </html>
