--- a/TureOrDare.html
+++ b/TureOrDare.html
@@ -2,7 +2,7 @@
     <head>
         <link rel="stylesheet" href="TureOrDare.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+        <script src="include.js"></script>
     </head>
     <body>
         <header>
