--- a/index.html
+++ b/index.html
@@ -1,18 +1,33 @@
 <html>
     <head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-        <script src="jquery-3.3.1.min.js"></script>
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <script src="include.js"></script>
     </head>
     <body>
-        <a onclick='shake();'>
-            <div>
-                <i class="fas fa-dice-one fa-4x"></i>
-                <i class="fas fa-dice-one fa-4x"></i>
-                <i class="fas fa-dice-one fa-4x"></i>
-                <i class="fas fa-dice-one fa-4x"></i>
-                <i class="fas fa-dice-one fa-4x"></i>
-            </div>
-        </a>
+	<div class="row">
+		<div class="col-sm-2">
+			<div class="card">
+				<div class="card-header fas fa-dice fa-4x"></div>
+				<div class="card-body">
+					<h5 class="card-title">吹牛</h5>
+					<p class="card-text">開吹</p>
+					<a href="Boast.html" class="btn btn-primary">Go somewhere</a>
+				</div>
+			</div>
+		</div>
+		<div class="col-sm-2">
+			<div class="card">
+				<div class="card-header fas fa-crown fa-4x"></div>
+				<div class="card-body">
+					<h5 class="card-title">真心大冒險</h5>
+					<p class="card-text">製作中</p>
+					<a href="TureOrDare.html" class="btn btn-primary">Go somewhere</a>
+				</div>
+			</div>
+		</div>
+	<div>
     </body>
-    <script src="Boast.js"></script>
 </html>
