--- a/Boast.html
+++ b/Boast.html
@@ -9,7 +9,7 @@
         <script src="jquery-3.3.1.min.js"></script>
     </head>
     <body>
-        <a onclick='shake();'>
+        <a onclick='remove();'>
             <div>
                 <i class="fas fa-dice-one fa-4x"></i>
                 <i class="fas fa-dice-one fa-4x"></i>
