--- a/TureOrDare.html
+++ b/TureOrDare.html
@@ -38,7 +38,8 @@
         </div>
         <!-- 遊戲區塊 -->
         <div class="area player-area">
-        </div>
+			<div class="postion"><i class="fas fa-search-location"></i></div>
+         </div>
         <!-- 系統區塊 -->
         <div class="area system-area" hidden>
             <div class="question">
