--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
     <head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<title>DrinkGame</title>
+		<meta name="keywords" content="喝酒,遊戲,酒吧,調酒,夜店,跳舞,夜生活,調酒,雞尾酒,音樂祭,活動,DJ,Club,Drink,Alcohol,Cocktail,Dance,Music,Bar" />
+		<meta name="description" content="喝玩樂與夜生活畫上等號，提供樂客們夜店位置營業時間等資訊，各個酒吧調酒營業時間等消息及各類音樂祭活動消息，甚至是地下音樂活動的集散地．在此還有樂友們在娛樂時小遊戲分享，各ＤＪ的資訊及曲風推薦，希望各位樂友在此有一片天">
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-138597469-1"></script>
 		<script>
@@ -34,6 +37,16 @@
 				<div class="card-header fas fa-crown fa-4x"></div>
 				<div class="card-body">
 					<h5 class="card-title">真心大冒險</h5>
+					<p class="card-text">製作中</p>
+					<a href="TureOrDare.html" class="btn btn-primary">Go somewhere</a>
+				</div>
+			</div>
+		</div>
+		<div class="col-sm-2">
+			<div class="card">
+				<div class="card-header fas fa-beer fa-4x"></div>
+				<div class="card-body">
+					<h5 class="card-title">酒吧</h5>
 					<p class="card-text">製作中</p>
 					<a href="TureOrDare.html" class="btn btn-primary">Go somewhere</a>
 				</div>
