--- a/index.html
+++ b/index.html
@@ -52,6 +52,26 @@
 				</div>
 			</div>
 		</div>
+		<div class="col-sm-2">
+			<div class="card">
+				<div class="card-header fas fa-compact-disc fa-4x"></div>
+				<div class="card-body">
+					<h5 class="card-title">ＤＪ</h5>
+					<p class="card-text">製作中</p>
+					<a href="TureOrDare.html" class="btn btn-primary">Go somewhere</a>
+				</div>
+			</div>
+		</div>
+		<div class="col-sm-2">
+			<div class="card">
+				<div class="card-header fas fa-calendar-alt fa-4x"></div>
+				<div class="card-body">
+					<h5 class="card-title">活動</h5>
+					<p class="card-text">製作中</p>
+					<a href="TureOrDare.html" class="btn btn-primary">Go somewhere</a>
+				</div>
+			</div>
+		</div>
 	<div>
     </body>
 </html>
