--- a/index.html
+++ b/index.html
@@ -6,21 +6,22 @@
 		<meta name="keywords" content="喝酒,遊戲,酒吧,調酒,夜店,跳舞,夜生活,調酒,雞尾酒,音樂祭,活動,DJ,Club,Drink,Alcohol,Cocktail,Dance,Music,Bar" />
 		<meta name="description" content="喝玩樂與夜生活畫上等號，提供樂客們夜店位置營業時間等資訊，各個酒吧調酒營業時間等消息及各類音樂祭活動消息，甚至是地下音樂活動的集散地．在此還有樂友們在娛樂時小遊戲分享，各ＤＪ的資訊及曲風推薦，希望各位樂友在此有一片天">
 		<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-138597469-1"></script>
-		<script>
-			window.dataLayer = window.dataLayer || [];
-			function gtag(){dataLayer.push(arguments);}
-			gtag('js', new Date());
-
-			gtag('config', 'UA-138597469-1');
-		</script>
+		<script src="common/head_t.js"></script>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
         <script src="jquery-3.3.1.min.js"></script>
+		<style>
+			body {
+				background : #393d3f;
+				color : #393d3f;
+			}
+		</style>
+		<script src="common/head_b.js"></script>
     </head>
     <body>
+	<script src="common/body_t.js"></script>
 	<div class="row">
 		<div class="col-sm-2">
 			<div class="card">
@@ -36,7 +37,7 @@
 			<div class="card">
 				<div class="card-header fas fa-crown fa-4x"></div>
 				<div class="card-body">
-					<h5 class="card-title">真心大冒險</h5>
+					<h5 class="card-title ">真心大冒險</h5>
 					<p class="card-text">製作中</p>
 					<a href="TureOrDare.html" class="btn btn-primary">Go somewhere</a>
 				</div>
@@ -73,5 +74,6 @@
 			</div>
 		</div>
 	<div>
+	<script src="common/body_b.js"></script>
     </body>
 </html>
