--- a/club/Club.html
+++ b/club/Club.html
@@ -37,32 +37,56 @@
             .filtr-item div p {
                 width: 50px;
             }
+            ul{
+                padding: 0px;
+            }
+            li{
+                border: 1px;
+                border-style: solid;
+                float: left;
+                list-style-type:none;
+                
+            }
+            li > a {
+                width: 100%;
+                height: 100%;
+                padding: 2px 10px;
+                transition-property: background;
+                transition-duration: 1s;
+            }
+            li > a:hover {
+                width: 100%;
+                height: 100%;
+                padding: 2px 10px;
+                background: red;
+                transition-property: background;
+                transition-duration: 1s;
+            }
         </style>
     </head>
     
     <body>
         <div>
             <ul>
-                <!-- For filtering controls add -->
                 <li data-filter="all">
-                    All items
+                    <a>All</a>
                 </li>
                 <li data-filter="Free">
-                    Free Drink
+                    <a>Free Drink</a>
                 </li>
                 <li data-filter="One">
-                    One Drink
+                    <a>One Drink</a>
                 </li>
                 <!-- For a shuffle control add -->
                 <li data-shuffle>
-                    Shuffle items
+                    <a>Shuffle items</a>
                 </li>
                 <!-- For sorting controls add -->
                 <li data-sortAsc>
-                    Ascending
+                    <a>Ascending</a>
                 </li>
                 <li data-sortDesc>
-                    Descending
+                    <a>Descending</a>
                 </li>
             </ul>
             <!-- To choose the value by which you want to sort add -->
