--- a/club/Club.html
+++ b/club/Club.html
@@ -45,7 +45,7 @@
             <ul>
                 <!-- For filtering controls add -->
                 <li data-filter="all">
-                    All items
+                    <button>All</button>
                 </li>
                 <li data-filter="Free">
                     Free Drink
