--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 		<title>酒樂｜夜生活官網｜DrinkGame</title>
 		<meta name="keywords" content="喝酒,遊戲,酒吧,調酒,夜店,跳舞,夜生活,調酒,雞尾酒,音樂祭,活動,DJ,Club,Drink,Alcohol,Cocktail,Dance,Music,Bar" />
 		<meta name="description" content="喝玩樂與夜生活畫上等號，提供樂客們夜店位置營業時間等資訊，各個酒吧調酒營業時間等消息及各類音樂祭活動消息，甚至是地下音樂活動的集散地．在此還有樂友們在娛樂時小遊戲分享，各ＤＪ的資訊及曲風推薦，希望各位樂友在此有一片天">
-        
+        <link rel="Shortcut Icon" type="image/x-icon" href="http://drink-game.ddns.net/icon.ico" />
+        <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         
@@ -31,6 +32,7 @@
         </script>                
 		<style>
 			body {
+                font-family: 'Permanent Marker', cursive;
 				background : #393d3f;
 				color : #393d3f;
 			}
