--- a/header.html
+++ b/header.html
@@ -1,23 +1,27 @@
-<div class="row no-gutters">
-    <a class="col-xs-2 col-md-2 logo">Drink Game</a>
-        <div class="col-xs-1 col-md-2">
+<div>
+    <div class="logo">
+        <a>Drink Game</a>
+    </div>
+    <div class="nave">
+        <div class="">
             <i class="fas fa-mask"></i>
             <a>Club</a>
         </div>
-        <div class="col-xs-1 col-md-2">
-        <i class="fas fa-beer"></i>
-        <a>Bar</a>
+        <div class="">
+            <i class="fas fa-beer"></i>
+            <a>Bar</a>
         </div>
-        <div class="col-xs-1 col-md-2">
-        <i class="fas fa-crown"></i>
-        <a>Game</a>
+        <div class="">
+            <i class="fas fa-crown"></i>
+            <a>Game</a>
         </div>
-        <div class="col-xs-1 col-md-2">
-        <i class="fas fa-compact-disc"></i>
-        <a>DJ</a>
+        <div class="">
+            <i class="fas fa-compact-disc"></i>
+            <a>DJ</a>
         </div>
-        <div class="col-xs-1 col-md-2">
-        <i class="fas fa-calendar-alt"></i>
-        <a>Activity</a>
+        <div class="">
+            <i class="fas fa-calendar-alt"></i>
+            <a>Activity</a>
         </div>
+    </div>
 </div>
