--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
         <link rel="Shortcut Icon" type="image/x-icon" href="http://drink-game.ddns.net/icon.ico" />
         <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+		<link href="css/main.css" rel="stylesheet">
+		
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
         <script src="js/jquery-3.3.1.min.js"></script>
         <script src="js/parallax.js"></script>
@@ -31,35 +31,10 @@
           });
         </script>                
 		<style>
-			body {
-                font-family: 'Permanent Marker', cursive;
-				background : white;
-				color : #393d3f;
-			}
-            header{
-                background: #6C6C6C;
-            }
-            .container-fluid{
-                padding: 0px;
-            }
-            header > div{
-                background: #6C6C6C;
-                line-height:60px;
-                text-align: center;
-                /*white-space:nowrap;*/
-            }
-            header > div >  div:hover{
-                font-size: 1.2em;
-                box-shadow:4px 4px 12px 4px rgba(0%,0%,0%,0.2);
-                transform: rotateY(360deg);
-            }
-            header .logo{
-                font-size: 22px;
-            }
 		</style>
     </head>
     <body>
-    <header class="container-fluid">
+    <header>
     </header>
 	<div class="row" hidden>
 		<div class="col-sm-2">
