header RWD 介面優化

--- a/header.html
+++ b/header.html
@@ -1,25 +1,25 @@
 <div>
     <div class="logo">
-        <a>Drink Game</a>
+        <a href="http://drink-game.ddns.net">Drink Game</a>
     </div>
     <div class="nave">
-        <div class="">
+        <div class="" title="Club">
             <i class="fas fa-mask"></i>
             <a>Club</a>
         </div>
-        <div class="">
+        <div class="" title="Bar">
             <i class="fas fa-beer"></i>
             <a>Bar</a>
         </div>
-        <div class="">
+        <div class="" title="Game">
             <i class="fas fa-crown"></i>
             <a>Game</a>
         </div>
-        <div class="">
+        <div class="" title="DJ">
             <i class="fas fa-compact-disc"></i>
             <a>DJ</a>
         </div>
-        <div class="">
+        <div class="" title="Activity">
             <i class="fas fa-calendar-alt"></i>
             <a>Activity</a>
         </div>
